derive/tests/snapshots/on_delete_error/Author/delete_author_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to delete a `Author` row in the `author` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn delete_author_by_id<'a>(
        &'a self,
        id: impl Into<AuthorId> + Clone,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use ::spacetimedsl::itertools::Itertools;
        let id = id.clone().into().value();
        let row_to_delete = self.db().author().id().find(id);
        let row_to_delete = match row_to_delete {
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "author".into(),
                    column_names_and_row_values: format!("{{ id : {} }}", & id).into(),
                });
            }
            Some(row_to_delete) => row_to_delete,
        };
        let mut deletion_result_entry = crate::spacetimedsl::delete::DeletionResultEntry {
            table_name: "author".into(),
            column_name: "id".into(),
            strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
            row_value: format!("{}", AuthorId::new(row_to_delete.id.clone())).into(),
            child_entries: vec![],
        };
        match crate::spacetimedsl::internal::DSLInternals::execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_author_table_was_deleted(
            self,
            crate::spacetimedsl::OnDeleteStrategy::Error,
            &row_to_delete.id,
        ) {
            Err(mut child_entries) => {
                deletion_result_entry.child_entries.append(&mut child_entries);
                let error = crate::spacetimedsl::delete::DeletionResult {
                    table_name: "author".into(),
                    one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                    entries: vec![deletion_result_entry],
                };
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::ReferenceIntegrityViolation(
                        crate::spacetimedsl::error::ReferenceIntegrityViolationError::OnDelete(
                            error,
                        ),
                    ),
                );
            }
            Ok(mut child_entries) => {
                deletion_result_entry.child_entries.append(&mut child_entries);
            }
        };
        match self.db().author().id().delete(&row_to_delete.id) {
            false => {
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        "Delete One Error: `count_of_rows_to_delete ( 1 ) != ( 0 ) count_of_deleted_rows`!"
                            .to_string(),
                    ),
                );
            }
            true => {}
        };
        match crate::spacetimedsl::internal::DSLInternals::execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_author_table_was_deleted(
            self,
            crate::spacetimedsl::OnDeleteStrategy::Delete,
            &row_to_delete.id,
        ) {
            Err(mut child_entries) => {
                deletion_result_entry.child_entries.append(&mut child_entries);
                let error = crate::spacetimedsl::delete::DeletionResult {
                    table_name: "author".into(),
                    one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                    entries: vec![deletion_result_entry],
                };
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        format!(
                            "Delete One Error: An unknown error occurred after changing the database state! If the reducer running this doesn't return an error, the state changes are persisted and you have problems now! Here is the deletion result: {error}"
                        ),
                    ),
                );
            }
            Ok(mut child_entries) => {
                deletion_result_entry.child_entries.append(&mut child_entries);
            }
        };
        match crate::spacetimedsl::internal::DSLInternals::execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_author_table_was_deleted(
            self,
            crate::spacetimedsl::OnDeleteStrategy::SetZero,
            &row_to_delete.id,
        ) {
            Err(mut child_entries) => {
                deletion_result_entry.child_entries.append(&mut child_entries);
                let error = crate::spacetimedsl::delete::DeletionResult {
                    table_name: "author".into(),
                    one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                    entries: vec![deletion_result_entry],
                };
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        format!(
                            "Delete One Error: An unknown error occurred after changing the database state! If the reducer running this doesn't return an error, the state changes are persisted and you have problems now! Here is the deletion result: {error}"
                        ),
                    ),
                );
            }
            Ok(mut child_entries) => {
                deletion_result_entry.child_entries.append(&mut child_entries);
            }
        };
        match crate::spacetimedsl::internal::DSLInternals::execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_author_table_was_deleted(
            self,
            crate::spacetimedsl::OnDeleteStrategy::Ignore,
            &row_to_delete.id,
        ) {
            Err(mut child_entries) => {
                deletion_result_entry.child_entries.append(&mut child_entries);
                let error = crate::spacetimedsl::delete::DeletionResult {
                    table_name: "author".into(),
                    one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                    entries: vec![deletion_result_entry],
                };
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        format!(
                            "Delete One Error: An unknown error occurred after changing the database state! If the reducer running this doesn't return an error, the state changes are persisted and you have problems now! Here is the deletion result: {error}"
                        ),
                    ),
                );
            }
            Ok(mut child_entries) => {
                deletion_result_entry.child_entries.append(&mut child_entries);
            }
        };
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "author".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
            entries: vec![deletion_result_entry],
        });
    }
}
